@@ -10,6 +10,10 @@
 	* conf/Configuraion.cc,config.xml: Fixed bug involving blank lines
 	before the first tag in a config file.
 
+	* usecode/ucxt/*: Added Yet Another Datafile (u7misc.data), specifing
+	the sizes in bytes of the parameter types, detailed in the
+	u7opcodes.data file. AKA, more abstraction.
+
 2002-01-21  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/studio.cc (ExultStudio): Open 'chunks' file in both
